# aqa

./: .env.example  CONTRIBUTING.md  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: agent_orientation.py  config.py  main.py  storage.py
app/api/: evidence.py  lineage.py  plans.py  projects.py  requirements.py  testcases.py
app/mcp_server/: server.py
app/models/: __init__.py  evidence.py  user.py
app/schemas/: evidence.py  plan.py  project.py  requirement.py  testcase.py
app/services/: auth.py  builds.py  evidence.py  executions.py  lineage.py  projects.py  requirements.py  suites.py  testcases.py
cli/: main.py
docs/: agent-guide.md  dogfooding-lessons.md  integrating-with-agents.md
docs/superpowers/plans/: 2026-06-14-agentqa-phase3-ui.md
docs/superpowers/specs/: 2026-06-15-operator-console-lineage-design.md
migrations/versions/: a7c3f1b9d2e4_add_reasoning_search_text_fts.py  b2d4f6a8c0e1_add_execution_claim_claimant.py
scripts/: dogfood.py  dogfood_requirements.py  reembed.py
scripts/bugcorpus/: DESIGN.md  RESULTS.md  load.py  originals.json  queries.json  recurrences.json
tests/: conftest.py  test_builds.py  test_cli.py  test_coverage.py  test_evidence_audit.py  test_evidence_verify.py  test_hierarchy.py  test_lineage.py  test_mcp_auth.py  test_migrations.py  test_projects.py  test_recurrence_search.py  test_services.py  test_storage.py  test_testcases.py
ui/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts
ui/app/: globals.css  layout.tsx  providers.tsx
ui/app/(app)/: layout.tsx  page.tsx
ui/app/(app)/plans/: page.tsx
ui/app/login/: page.tsx
ui/components/: Shell.tsx  ui.tsx
ui/e2e/: smoke.spec.ts
ui/lib/: api.ts  types.ts
