[project]
name = "agentqa"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5",  # passlib 1.7.4 is incompatible with bcrypt 5.x (72-byte self-test)
    "pgvector>=0.3.6",
    "minio>=7.2",
    "mcp>=1.1",
    "typer>=0.13",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
agentqa = "cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# domain models are named Test* (TestCase, TestPlan, ...); restrict pytest class
# collection to a pattern that won't match them (all our tests are functions)
python_classes = ["Check"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools]
packages = ["app", "cli", "scripts"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
