[project]
name = "aqa"
version = "0.1.0"
description = "Test management for agentic coding — a TestLink-equivalent evidence and context store for AI QA teams, with a REST API, MCP server, and CLI."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Nishant Tiwari" }]
keywords = ["testing", "test-management", "qa", "mcp", "agents", "testlink"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<5",  # passlib 1.7.4 is incompatible with bcrypt 5.x (72-byte self-test)
    "pgvector>=0.3.6",
    "minio>=7.2",
    "mcp>=1.1",
    "typer>=0.13",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
embeddings = [
    "sentence-transformers>=3.0",
]

[project.urls]
Homepage = "https://github.com/nt1412/aqa"
Repository = "https://github.com/nt1412/aqa"
Issues = "https://github.com/nt1412/aqa/issues"

[project.scripts]
aqa = "cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# domain models are named Test* (TestCase, TestPlan, ...); restrict pytest class
# collection to a pattern that won't match them (all our tests are functions)
python_classes = ["Check"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic-generated migrations are not hand-maintained; don't lint them.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools]
packages = ["app", "cli", "scripts"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
